--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbzbYNQLZo9zStRJuvAg3cKfrvSNHBOmAi4BML0bfiCDjzy3IFn9vsvkrzNV9Hr9bsLm/exec" />
+    <meta http-equiv="refresh" content="0; url=https://https://script.google.com/macros/s/AKfycbwRsjCuBocA6M4VO_uuJGPiFHMmo8Qzbf6EnmfFzXM_pH8f8kq0EeBGGEl00egiFf7x/exec" />
     <title>Redirecionando...</title>
   </head>
   <body>
